<resources>
    <string name="app_name">Tomatotec</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_ins_1">Click the camera icon to start analyzing the tomato plant!</string>
    <string name="home_ins_definition">Bacterial wilt is caused by a soil-borne bacterium named "Ralstonia solanacearum" (formerly known as Pseudomonas solonacearum.) Tomato wilt bacterium mainly inhabits the roots, and enters the root system at points of injury caused by farm tools or equipment and soil pests.</string>
    <string name="bwresult_about_disease">ABOUT THE DISEASE AND PATHOGEN</string>
    <string name="bwresult_about_disease_def">Bacterial wilt caused by "Ralstonia solanacearum" is a serious disease of tomato plants. It survives for long periods in the soil, even in the absence of host plants. Even though there are now reported tolerant varieties, outbreaks of the disease can still be catastrophic problem.</string>
    <string name="bwresult_about_disease_def1">The pathogen enters the root system and stems through wounds caused by the damages through cultivation, human activity, nematodes or insects.</string>
    <string name="bwresult_signs">SIGNS AND SYMPTOMS</string>
    <string name="bwresult_signs_def">• You may observe the wilting of a few leaves. This often goes unnoticed just like how plants respond to drought stress and nutrient deficiency.</string>
    <string name="bwresult_signs_def1">• Under less favorable conditions, you may observe slower progression of wilts in the leaves, brownish discoloration in the base of a stem.</string>
    <string name="bwresult_signs_def2">• Later on, the entire plant suddenly wilts and eventually dies.</string>
    <string name="bwresult_crop_stage">CROP STAGE AFFECTED</string>
    <string name="bwresult_crop_stage_def">Appears in all growth stages of development.</string>
    <string name="bwresult_warning_info">Before taking any action, read the symptoms and descriptions to make sure this diagnosis matches your problem. Otherwise, you can use the severity calculator to get the management advice.</string>
    <string name="severity_severe_calculator_def">To know the severity, we need to use the Disease Severity Rating Scale (DSRS) based on wilting symptoms:</string>
    <string name="lvl1_cultural_measures">• Implement a diverse crop rotation schedule with non-host plants such as legumes or grains to break the disease cycle and reduce pathogen buildup in the soil. \n• Practice strict sanitation measures by removing and destroying all crop debris, weeds, and volunteer tomato plants to eliminate potential sources of bacterial wilt inoculum.\n• Optimize soil health and fertility through regular soil testing, balanced fertilization, and organic matter amendments to promote vigorous plant growth and resilience.\n• Utilize mulching techniques with organic materials such as straw or compost to suppress weed growth, conserve soil moisture, and minimize soil splash dispersal of bacterial wilt pathogens.</string>
    <string name="lvl1_biological_measures">• Introduce beneficial microorganisms such as mycorrhizal fungi or rhizobacteria known to suppress soilborne pathogens and enhance plant health.\n• Incorporate cover crops with biofumigant properties, such as mustard or rapeseed, into the rotation to release volatile compounds that inhibit pathogen activity.</string>
    <string name="lvl1_chemical_measures">• Apply preventive applications of copper-based fungicides or biological control agents labeled for bacterial wilt suppression during transplanting or early vegetative growth stages.\n•	Use soil drenches or seed treatments with biological inoculants containing antagonistic microorganisms to enhance root system colonization and disease protection.</string>
    <string name="lvl1_monitoring_measures">• Implement a comprehensive scouting program to monitor for early signs of bacterial wilt infection, focusing on lower leaves, wilting, or yellowing symptoms.\n• Maintain accurate records of field observations, weather conditions, and disease incidence to track trends and assess the effectiveness of management interventions. \n• Integrate bacterial wilt management into an overall IPM strategy that considers cultural, biological, and chemical control methods while minimizing environmental impacts and promoting sustainable agricultural practices.\n</string>
    <string name="lvl2_cultural_measures">• Continue implementing crop rotation with non-host plants to disrupt the disease cycle and reduce pathogen pressure in the soil.\n• Enhance sanitation practices by removing and destroying any infected plant debris promptly to prevent further spread of the disease.\n •Optimize irrigation scheduling and drainage to maintain optimal soil moisture levels and reduce stress on tomato plants.\n• Practice careful weed management to eliminate potential alternate hosts and reduce competition for resources.</string>
    <string name="lvl2_biological_measures">• Expand the use of beneficial microbes such as Trichoderma spp. or Bacillus spp. known to suppress bacterial wilt pathogens and stimulate plant defenses.\n• Incorporate cover crops with biofumigant properties, such as sudangrass or sorghum-sudangrass hybrids, to release allelochemicals that inhibit pathogen growth.</string>
    <string name="lvl2_chemical_measures">•	Consider targeted applications of systemic bactericides or biological control agents at critical growth stages to provide additional protection against bacterial wilt infection.\n • Rotate between different modes of action for chemical treatments to minimize the risk of pathogen resistance development.</string>
    <string name="lvl2_monitoring_measures">• Increase monitoring frequency to detect any changes in disease severity and adjust management strategies accordingly.\n• Utilize predictive models or disease forecasting tools to anticipate periods of high disease risk and implement control measures proactively.\n</string>
    <string name="lvl3_cultural_measures">•	Implement advanced soil management techniques such as raised bed or furrow irrigation systems to improve water distribution and reduce soilborne pathogen movement.\n• Consider using resistant or tolerant tomato varieties or rootstocks with known resistance to bacterial wilt to reduce disease incidence and severity.\n•	Adopt precision agriculture technologies such as remote sensing or soil moisture monitoring to optimize resource use and minimize stress on plants.</string>
    <string name="lvl3_biological_measures">• Explore the use of beneficial nematodes or predatory mites as biological control agents to target soil-dwelling stages of bacterial wilt pathogens.\n• Investigate the potential for soil amendments with organic matter or compost to enhance soil biodiversity and suppress pathogen populations.</string>
    <string name="lvl3_chemical_measures">•	Apply systemic bactericides or nematicides as soil drenches or through drip irrigation systems to target bacterial wilt pathogens directly in the root zone.\n•	Consider the use of biopesticides or botanical extracts with known antimicrobial properties as alternative control options.</string>
    <string name="lvl3_monitoring_measures">• Utilize remote sensing technologies or aerial imaging to map disease hotspots and guide targeted management interventions.\n•	Integrate cultural, biological, and chemical control measures into an adaptive management plan that responds to changing disease dynamics and environmental conditions.\n</string>
    <string name="lvl4_cultural_measures">•	Implement emergency measures such as soil fumigation or solarization to reduce pathogen populations in severely affected areas before replanting.\n• Consider implementing strict quarantine measures to prevent the movement of contaminated soil or plant material to uninfected areas.\n• Evaluate the potential for alternative cropping systems or cover crops with known allelopathic effects to suppress bacterial wilt pathogens.</string>
    <string name="lvl4_biological_measures">• Investigate the use of microbial consortia or bioaugmentation strategies to enhance soil biodiversity and suppress pathogen activity.\n• Explore the potential for using plant-derived biopesticides or botanical extracts with broad-spectrum antimicrobial properties as alternative control options.</string>
    <string name="lvl4_chemical_measures">•	Apply systemic bactericides or nematicides as a last resort to manage severe bacterial wilt outbreaks, following label instructions and local regulations.\n• Consider the use of chemical soil sterilants or fumigants under expert guidance to eradicate bacterial wilt pathogens from heavily infested soil.</string>
    <string name="references_copyright">All images, information, videos, and other media included in this work are utilized solely for educational and thesis purposes, with no intention of copyright infringement. They are employed to enhance the understanding and analysis of the subject matter being explored. Proper attribution and citation have been ensured to acknowledge the original creators and sources of the content. This use strictly adheres to the principles of fair use and academic integrity, allowing for the critical examination and discussion of relevant topics within the scope of the educational and research context.</string>
    <string name="img_src1"><a href="https://apps.lucidcentral.org/pppw_v10/text/web_full/entities/tomato_bacterial_wilt_146.htm">• Jackson, G. (n.d.). Tomato bacterial wilt (146). Fact Sheet Fusion V2. https://apps.lucidcentral.org/pppw_v10/text/web_full/entities/tomato_bacterial_wilt_146.htm</a></string>
    <string name="img_src2"><a href="https://content.ces.ncsu.edu/bacterial-wilt-of-tomatoes">• Southern Bacterial Wilt of Tomato | NC State Extension Publications. (n.d.). https://content.ces.ncsu.edu/bacterial-wilt-of-tomatoes</a></string>
    <string name="img_src3"><a href="https://www.hortidaily.com/article/9576988/how-to-detect-and-treat-the-southern-bacterial-wilt-of-tomato/">• How to detect and treat the southern bacterial wilt of tomato. (2023, November 15). https://www.hortidaily.com/article/9576988/how-to-detect-and-treat-the-southern-bacterial-wilt-of-tomato/</a></string>
    <string name="img_src4"><a href="https://mobiagri.vn/tong-hop-cac-loai-sau-benh-hai-thuong-gap-o-cay-ca-chua/">• Tổng hợp các loại sâu bệnh hại thường gặp ở cây cà chua. (2023, September 16). mobiAgri. https://mobiagri.vn/tong-hop-cac-loai-sau-benh-hai-thuong-gap-o-cay-ca-chua/</a></string>
    <string name="img_src5"><a href="https://doi.org/10.1016/j.scienta.2021.110418">• Nguyen, T. T., Le, N. T., &amp; Sim, S. (2021). Genome-wide association study and marker development for bacterial wilt resistance in tomato (Solanum lycopersicum L.). Scientia Horticulturae, 289, 110418. https://doi.org/10.1016/j.scienta.2021.110418</a></string>
    <string name="research_src1"><a href="https://doi.org/10.3389/fmicb.2023.1281381">• Sun, Y., Su, Y., Meng, Z., Zhang, J., Zheng, L., Miao, S., Qin, D., Ruan, Y., Wu, Y., Xiong, L., Yan, X., Dong, Z., Cheng, P., Shao, M., &amp; Gui, Y. (2023). Biocontrol of bacterial wilt disease in tomato using Bacillus subtilis strain R31. Frontiers in Microbiology, 14. https://doi.org/10.3389/fmicb.2023.1281381</a></string>
    <string name="research_src2"><a href="https://doi.org/10.1099/mic.0.2008/019448-0">• Álvarez, B., López, M. M., &amp; Biosca, E. G. (2008). Survival strategies and pathogenicity of Ralstonia solanacearum phylotype II subjected to prolonged starvation in environmental water microcosms. Microbiology, 154(11), 3590–3598. https://doi.org/10.1099/mic.0.2008/019448-0</a></string>
</resources>