<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/white"
        app:elevation="6dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title=" "
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/diagnosisBtn"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_diagnosis"
                android:layout_gravity="end"
                android:visibility="gone"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/diseaseWarningIndicator"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/rounded_disease_detected"
                android:visibility="gone">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_warning_disease"
                    app:tint="@color/red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Symptoms Detected!"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bacterial Wilt"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:layout_height="220dp"
                app:iss_auto_cycle="true"
                app:iss_delay="500"
                app:iss_placeholder="@android:color/darker_gray"
                app:iss_error_image="@android:color/darker_gray"
                app:iss_corner_radius="20"
                app:iss_selected_dot="@drawable/default_selected_dot"
                app:iss_unselected_dot="@drawable/default_unselected_dot"
                app:iss_period="2000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bwresult_about_disease"
                android:textColor="@color/red"
                android:background="@drawable/rounded_gray_textbg"
                android:padding="3dp"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/aboutDef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bwresult_about_disease_def"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bwresult_about_disease_def1"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bwresult_signs"
                android:textColor="@color/red"
                android:background="@drawable/rounded_gray_textbg"
                android:padding="3dp"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bwresult_signs_def"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bwresult_signs_def1"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bwresult_signs_def2"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bwresult_crop_stage"
                android:textColor="@color/red"
                android:background="@drawable/rounded_gray_textbg"
                android:padding="3dp"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bwresult_crop_stage_def"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:justificationMode="inter_word"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/rounded_warning_info">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp"
                            android:src="@drawable/ic_info"
                            app:tint="@color/red" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:textSize="11sp"
                            android:text="@string/bwresult_warning_info"
                            android:justificationMode="inter_word"
                            />
                    </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>