<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/white"
        app:elevation="6dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title=" "
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/diagnosisBtn"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_diagnosis"
                android:layout_gravity="end"
                android:visibility="gone"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="References"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/references_copyright"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Image Sources"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img_src1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:autoLink="web"
                android:textColorLink="@color/red"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img_src2"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:autoLink="web"
                android:textColorLink="@color/red"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img_src3"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:autoLink="web"
                android:textColorLink="@color/red"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img_src4"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:autoLink="web"
                android:textColorLink="@color/red"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img_src5"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:autoLink="web"
                android:textColorLink="@color/red"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Video Sources"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img_src1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:autoLink="web"
                android:textColorLink="@color/red"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Research Sources"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/research_src1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:autoLink="web"
                android:textColorLink="@color/red"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/research_src2"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:autoLink="web"
                android:textColorLink="@color/red"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="40dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>